--- a/Smooth/Smooth.Foundations.csproj
+++ b/Smooth/Smooth.Foundations.csproj
@@ -54,15 +54,17 @@
     <Compile Include="Foundations\Algebraics\Unit.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Condition.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\GeneralMatcher.cs" />
-    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\GeneralMatcherResult.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\IMatcher.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\IWhereHandler.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\IWithHandler.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Resolver.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\GeneralMatcherResult.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\MatcherDelegates.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\WhereMatcher.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\WhereMatcherResult.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\WithMatcher.cs" />
-    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\ExecutableMatcher.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\GeneralMatcher.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\WithMatcherResult.cs" />
     <Compile Include="Foundations\PatternMatching\ValueOrError\Action\ErrorMatcher.cs" />
     <Compile Include="Foundations\PatternMatching\ValueOrError\Action\ValueMatcher.cs" />
     <Compile Include="Foundations\Algebraics\ValueOrError.cs" />
