Pattern matchers are now structs. Everything seems to be done. Not fully tested yet.

--- a/Smooth/Smooth.Foundations.csproj
+++ b/Smooth/Smooth.Foundations.csproj
@@ -52,21 +52,34 @@
     <Compile Include="Foundations\Algebraics\Tuple.cs" />
     <Compile Include="Foundations\Algebraics\Union.cs" />
     <Compile Include="Foundations\Algebraics\Unit.cs" />
-    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Condition.cs" />
-    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\GeneralMatcher.cs" />
-    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\IMatcher.cs" />
-    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\IWhereHandler.cs" />
-    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\IWithHandler.cs" />
-    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Resolver.cs" />
+    <Compile Include="Foundations\PatternMatching\NoMatchException.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\GeneralMatcherResult.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\MatcherDelegates.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\ValueOrError\ErrorMatcher.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\ValueOrError\ErrorMatcherResult.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\ValueOrError\OfValueMatcher.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\ValueOrError\OfValueMatcherResult.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\ValueOrError\VoEMatcher.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\ValueOrError\VoEMatcherResult.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\ValueOrError\ValueMatcher.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\ValueOrError\ValueMatcherResult.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\ValueOrError\WhereValueMatcher.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\ValueOrError\WhereValueMatcherResult.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\Option\NoneMatcher.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\Option\NoneMatcherResult.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\Option\OfOptionMatcherResult.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\Option\OptionMatcher.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\Option\OfOptionMatcher.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\Option\OptionMatcherResult.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\Option\SomeMatcher.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\Option\SomeMatcherResult.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\Option\WhereOptionMatcher.cs" />
+    <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\Option\WhereOptionMatcherResult.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\WhereMatcher.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\WhereMatcherResult.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\WithMatcher.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\GeneralMatcher.cs" />
     <Compile Include="Foundations\PatternMatching\RefactoredMatcher\Structs\WithMatcherResult.cs" />
-    <Compile Include="Foundations\PatternMatching\ValueOrError\Action\ErrorMatcher.cs" />
-    <Compile Include="Foundations\PatternMatching\ValueOrError\Action\ValueMatcher.cs" />
     <Compile Include="Foundations\Algebraics\ValueOrError.cs" />
     <Compile Include="Foundations\Algebraics\Variant.cs" />
     <Compile Include="Foundations\Collections\Comparer.cs" />
@@ -99,40 +112,8 @@
     <Compile Include="Foundations\Dispose\DisposalQueue.cs" />
     <Compile Include="Foundations\Dispose\SmoothDisposer.cs" />
     <Compile Include="Foundations\Events\GenericEvents.cs" />
-    <Compile Include="Foundations\PatternMatching\ExecMatcher.cs" />
-    <Compile Include="Foundations\PatternMatching\ExecMatcherAfterElse.cs" />
     <Compile Include="Foundations\PatternMatching\GeneralMatcher\GeneralMatcherExtensions.cs" />
-    <Compile Include="Foundations\PatternMatching\MatchActionSelector.cs" />
-    <Compile Include="Foundations\PatternMatching\MatchFunctionSelector.cs" />
-    <Compile Include="Foundations\PatternMatching\NoMatchException.cs" />
-    <Compile Include="Foundations\PatternMatching\Options\ActionSelectorForOption.cs" />
-    <Compile Include="Foundations\PatternMatching\Options\FuncSelectorForOption.cs" />
-    <Compile Include="Foundations\PatternMatching\Options\NoneMatcher.cs" />
-    <Compile Include="Foundations\PatternMatching\Options\NoneMatcherResult.cs" />
-    <Compile Include="Foundations\PatternMatching\Options\OfMatcher.cs" />
-    <Compile Include="Foundations\PatternMatching\Options\OfMatcherResult.cs" />
-    <Compile Include="Foundations\PatternMatching\Options\OptionMatcher.cs" />
-    <Compile Include="Foundations\PatternMatching\Options\OptionMatcherAfterElse.cs" />
-    <Compile Include="Foundations\PatternMatching\Options\ResultOptionMatcher.cs" />
-    <Compile Include="Foundations\PatternMatching\Options\ResultOptionMatcherAfterElse.cs" />
-    <Compile Include="Foundations\PatternMatching\Options\SomeMatcher.cs" />
-    <Compile Include="Foundations\PatternMatching\Options\SomeMatcherResult.cs" />
-    <Compile Include="Foundations\PatternMatching\Options\WhereForOption.cs" />
-    <Compile Include="Foundations\PatternMatching\Options\WhereForOptionResult.cs" />
-    <Compile Include="Foundations\PatternMatching\ResultMatcher.cs" />
-    <Compile Include="Foundations\PatternMatching\ResultMatcherWithElse.cs" />
     <Compile Include="Foundations\PatternMatching\SpecificTypeMatcherExtensions.cs" />
-    <Compile Include="Foundations\PatternMatching\ValueOrError\Action\WIthForValueActionHandler.cs" />
-    <Compile Include="Foundations\PatternMatching\ValueOrError\Function\ValueOrErrorMatchFunctionSelector.cs" />
-    <Compile Include="Foundations\PatternMatching\ValueOrError\Function\ValueOrErrorResultMatcher.cs" />
-    <Compile Include="Foundations\PatternMatching\ValueOrError\Function\ValueOrErrorResultMatcherWithElse.cs" />
-    <Compile Include="Foundations\PatternMatching\ValueOrError\Function\WhereForValueOrError.cs" />
-    <Compile Include="Foundations\PatternMatching\ValueOrError\Function\WithForValueOrErrorHandler.cs" />
-    <Compile Include="Foundations\PatternMatching\ValueOrError\ValueOrErrorExtensions.cs" />
-    <Compile Include="Foundations\PatternMatching\WhereForActionHandler.cs" />
-    <Compile Include="Foundations\PatternMatching\WhereForFuncHandler.cs" />
-    <Compile Include="Foundations\PatternMatching\WithForActionHandler.cs" />
-    <Compile Include="Foundations\PatternMatching\WithForFuncHandler.cs" />
     <Compile Include="Foundations\Platform\BasePlatform.cs" />
     <Compile Include="Foundations\Platform\Runtime.cs" />
     <Compile Include="Foundations\Pools\KeyedPool.cs" />
@@ -189,9 +170,6 @@
     <Compile Include="Foundations\Slinq\Test\UnionSlinq.cs" />
     <Compile Include="Foundations\Slinq\Test\WhereTakeSelectAggregateLinq.cs" />
     <Compile Include="Foundations\Slinq\Test\WhereTakeSelectAggregateSlinq.cs" />
-    <Compile Include="Foundations\PatternMatching\ValueOrError\ValueOrErrorMatcher.cs" />
-    <Compile Include="Foundations\PatternMatching\ValueOrError\Action\ValueOrErrorMatchActionSelector.cs" />
-    <Compile Include="Foundations\PatternMatching\ValueOrError\Action\WhereForValue.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Foundations\Slinq\Test\SlinqTest.unity" />
